Remove Bootstrap 3 files; Add CDN links for Bootstrap 4

--- a/f5_sphinx_theme/theme.conf
+++ b/f5_sphinx_theme/theme.conf
@@ -1,6 +1,6 @@
 [theme]
 inherit = classic
-stylesheet = css/bootstrap.min.css
+stylesheet = css/f5-theme.css
 
 [options]
 site_name = Cloud Docs Home
