move test docs and reorg test scripts

--- a/f5_sphinx_theme/theme.conf
+++ b/f5_sphinx_theme/theme.conf
@@ -8,3 +8,4 @@ next_prev_link = False
 html_last_updated_fmt = '%Y-%m-%d %H:%M:%S'
 version_selector = False
 base_url = /
+version_selector = False
