--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ env:
   global:
   - DIST_REPO="f5-sphinx-theme"
   - USER_REPO=$(echo $TRAVIS_REPO_SLUG | cut -f -1 -d / )
-  - S3_DIST_URL="http://d12ecz1n19ym1p.cloudfront.net"
+  - S3_DIST_URL="http://d3s2z99mfhr69y.cloudfront.net"
   - BUILD_HTML_DIR=${TRAVIS_BUILD_DIR}/test-deploy/docs/_build/html
   - BRANCH_DIR=${DIST_REPO}/travis-builds/${USER_REPO}/${TRAVIS_BRANCH}/
-  - UPLOAD_DIR="${BRANCH_DIR}$(date +%F)-${TRAVIS_BUILD_NUMBER}"
   - AWS_S3_BUCKET=${ARTIFACTS_BUCKET}
+  - UPLOAD_DIR="f5-sphinx-theme/$(date +%F)/${TRAVIS_BUILD_NUMBER}"
 
 language: python
 python:
